fix: update override for blurry nav and dark mode
The bug happens with `''` because when blurry navbar option is enabled,
and forced dark mode is disabled, you get this as compiled output:

background-color: rgba(29,29,29,0.8) '';

This is undesired behavior, and the way to work around it is to use
`()`, which is an empty list, or _nothing_ in compiled output:

background-color: rgba(29,29,29,0.8);

I went ahead and replaced `class` as well, even though it's not really
necessary in that use-case, but it results in the same compiled output.

--- a/tweaks.user.styl
+++ b/tweaks.user.styl
@@ -67,8 +67,8 @@
     if blurry {
         @supports (backdrop-filter: blur()) or (-webkit-backdrop-filter: blur()) {
             // Setting class conditionally. Interop new- and old-bar styles.
-            class = (newBars) ? '> div[class]' : ''
-            forceDark = (colors) ? i : ''
+            class = (newBars) ? '> div[class]' : ()
+            forceDark = (colors) ? i : ()
 
             // Generate it.
             nav { class } {
